--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,9 @@
 ---
 layout: page
-css: ["about.css", "animate.css", "morphext.css"]
-js: ["morphext.min.js", "about.js"]
+css: ["index.css"]
 ---
-
-{% include about.html %}
-<!-- <div class="row">
+<div class="row">
+  asjkfdsjkah
   {% for post in paginator.posts %}
   <div class="col s12">
     <div class="card hoverable">
@@ -66,4 +64,4 @@ js: ["morphext.min.js", "about.js"]
       </li>
     </ul>
   </div>
-</div> -->
+</div> 
